--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
   </script>
   <style>
-    body { font-family: "Assistant", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji"; }
+    body { font-family: "Assistant", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
   </style>
 </head>
 <body class="bg-bg text-gray-900">
@@ -85,7 +85,6 @@
   <section id="services" class="max-w-6xl mx-auto px-4 py-12">
     <h2 class="text-3xl md:text-4xl font-bold mb-8">שירותים מובילים</h2>
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <!-- Card -->
       <div class="rounded-2xl bg-white border shadow-sm">
         <div class="p-4 border-b text-xl font-semibold text-brand">עבודות כלליות</div>
         <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
@@ -130,7 +129,6 @@
     <div class="max-w-6xl mx-auto px-4">
       <h3 class="text-2xl md:text-3xl font-bold mb-8">מחירים לדוגמה</h3>
       <div class="grid md:grid-cols-3 gap-6">
-        <!-- Price Card -->
         <div class="rounded-2xl bg-white border shadow-sm">
           <div class="p-4 border-b flex items-center justify-between">
             <span class="font-semibold">ביקור טכנאי</span>
@@ -165,7 +163,7 @@
     </div>
   </section>
 
-  <!-- Before & After (נשאיר דמו עד שיהיו תמונות אמיתיות) -->
+  <!-- Before & After (דמו זמני) -->
   <section class="max-w-6xl mx-auto px-4 py-12">
     <h3 class="text-2xl md:text-3xl font-bold mb-6">לפני ואחרי</h3>
     <div class="grid md:grid-cols-3 gap-6">
@@ -197,6 +195,51 @@
         <div class="p-4 border-t">
           <div class="text-sm text-gray-600">החלפת ברז וכיור</div>
           <div class="text-xs text-gray-500">* דוגמאות זמניות. נחליף לשלכם כשיהיו.</div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Testimonials -->
+  <section id="testimonials" class="bg-bg py-12 border-t">
+    <div class="max-w-6xl mx-auto px-4">
+      <h3 class="text-2xl md:text-3xl font-bold mb-8 text-brand">מה הלקוחות מספרים עלינו</h3>
+
+      <div class="grid md:grid-cols-3 gap-6">
+        <div class="rounded-2xl bg-white border shadow-sm p-6">
+          <div class="text-gray-700 leading-relaxed">
+            “התקשרתי בבוקר לתיקון תקלה בתאורה, וכפיר הגיע תוך שעה! עבודה נקייה, מקצועית ויחס מדהים.”
+          </div>
+          <div class="mt-4 font-semibold text-brand">– עדי מ., תל אביב</div>
+        </div>
+
+        <div class="rounded-2xl bg-white border shadow-sm p-6">
+          <div class="text-gray-700 leading-relaxed">
+            “בני צבע לנו את כל הסלון תוך יום אחד. שירות אדיב, מחיר הוגן, ואפילו עזר להזיז רהיטים בלי שביקשתי.”
+          </div>
+          <div class="mt-4 font-semibold text-brand">– ליאת ו., פתח תקווה</div>
+        </div>
+
+        <div class="rounded-2xl bg-white border shadow-sm p-6">
+          <div class="text-gray-700 leading-relaxed">
+            “סוף סוף מישהו שאפשר לסמוך עליו! הרכיב ארון, תיקן ניאגרה וצביעה קטנה – הכל באותו יום, בלי הפתעות.”
+          </div>
+          <div class="mt-4 font-semibold text-brand">– רון ש., ראשון לציון</div>
+        </div>
+      </div>
+
+      <div class="mt-10 grid md:grid-cols-2 gap-6">
+        <div class="rounded-2xl bg-white border shadow-sm p-6">
+          <div class="text-gray-700 leading-relaxed">
+            “שירות מהיר ומעל המצופה. שלחתי תמונה בוואטסאפ וקיבלתי הצעת מחיר במקום. ממליצה בחום.”
+          </div>
+          <div class="mt-4 font-semibold text-brand">– נטע ח., רמת גן</div>
+        </div>
+        <div class="rounded-2xl bg-white border shadow-sm p-6">
+          <div class="text-gray-700 leading-relaxed">
+            “BK אחזקות טיפלו לנו בתריסים ובדלתות. כל דבר בוצע בדיוק ובסבלנות. אנשים זהב!”
+          </div>
+          <div class="mt-4 font-semibold text-brand">– אמיר ג., חולון</div>
         </div>
       </div>
     </div>
