--- a/index.html
+++ b/index.html
@@ -3,27 +3,25 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BK אחזקות – כל פתרונות הבית במקום אחד</title>
-  <meta name="description" content="BK אחזקות – הנדימן מקצועי עם יחס אישי. חשמל קל, אינסטלציה, צבע, הרכבות ותיקונים. זמינות במרכז, אחריות מלאה.">
-  <!-- Google Font: Assistant -->
+  <title>B&K אחזקות – כל פתרונות הבית במקום אחד</title>
+  <meta name="description" content="B&K אחזקות – הנדימן מקצועי עם יחס אישי. חשמל קל, אינסטלציה, צבע, הרכבות ותיקונים. זמינות במרכז, אחריות מלאה.">
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <!-- Tailwind CDN -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       theme: {
         extend: {
           colors: {
-            brand: '#1E3A8A',   /* כחול אמינות */
-            accent: '#F97316',  /* כתום חמים */
-            bg: '#FAF7F2'       /* בז׳ עדין לרקע */
+            brand: '#1E3A8A',
+            accent: '#F97316',
+            bg: '#FAF7F2'
           }
         }
       }
     }
   </script>
   <style>
-    body { font-family: "Assistant", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; }
+    body { font-family: "Assistant", sans-serif; }
   </style>
 </head>
 <body class="bg-bg text-gray-900">
@@ -32,9 +30,9 @@
   <div class="w-full bg-brand text-white sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <div class="w-10 h-10 rounded-2xl bg-white/15 grid place-items-center font-bold">BK</div>
+        <div class="w-10 h-10 rounded-2xl bg-white/15 grid place-items-center font-bold">B&K</div>
         <div>
-          <div class="text-xl font-bold">BK אחזקות</div>
+          <div class="text-xl font-bold">B&K אחזקות</div>
           <div class="text-sm text-white/80">כל פתרונות הבית במקום אחד</div>
         </div>
       </div>
@@ -51,7 +49,7 @@
     <div class="absolute inset-0 bg-[url('https://images.unsplash.com/photo-1581093458791-9d09f62b7c1b?q=80&w=1600&auto=format&fit=crop')] bg-cover bg-center opacity-10"></div>
     <div class="relative max-w-6xl mx-auto px-4 py-14 lg:py-20">
       <span class="inline-flex items-center gap-2 px-3 py-1 rounded-full bg-white border text-sm mb-3 shadow-sm">
-        BK אחזקות – אמינות, אחריות וזמינות
+        B&K אחזקות – אמינות, אחריות וזמינות
       </span>
       <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-brand">
         שירותי הנדימן מקצועיים עם יחס אישי
@@ -73,11 +71,10 @@
 
   <!-- Why Us -->
   <section class="max-w-6xl mx-auto px-4 py-10">
-    <h2 class="text-3xl md:text-4xl font-bold mb-3 text-brand">למה הקמנו את BK אחזקות</h2>
+    <h2 class="text-3xl md:text-4xl font-bold mb-3 text-brand">למה הקמנו את B&K אחזקות</h2>
     <p class="text-gray-700 max-w-4xl leading-7">
-      BK אחזקות נולדה מהשטח: בני וכפיר ראו כמה קשה למצוא בעלי מקצוע אמינים שמגיעים בזמן, מסבירים מראש את העלויות ומשאירים בית נקי.
-      לכן הקמנו שירות הנדימן שנותן שקט נפשי – תקשורת ברורה, מחירים הוגנים ואחריות מלאה על כל עבודה. המטרה פשוטה:
-      לפתור לכם בעיות בבית, מהר ובדיוק כמו שצריך.
+      B&K אחזקות נולדה מהשטח: בני וכפיר ראו כמה קשה למצוא בעלי מקצוע אמינים שמגיעים בזמן, מסבירים מראש את העלויות ומשאירים בית נקי.
+      לכן הקמנו שירות הנדימן שנותן שקט נפשי – תקשורת ברורה, מחירים הוגנים ואחריות מלאה על כל עבודה.
     </p>
   </section>
 
@@ -94,108 +91,14 @@
       <div class="rounded-2xl bg-white border shadow-sm">
         <div class="p-4 border-b text-xl font-semibold text-brand">חשמל ותאורה</div>
         <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>התקנת גופי תאורה ומאווררי תקרה</li><li>מפסקים ושקעים</li><li>איתור תקלות בסיסיות</li><li>הרחבת נקודות (עם חשמלאי מוסמך לפי צורך)</li>
+          <li>התקנת גופי תאורה</li><li>מפסקים ושקעים</li><li>איתור תקלות בסיסיות</li><li>הרחבת נקודות</li>
         </ul>
       </div>
       <div class="rounded-2xl bg-white border shadow-sm">
         <div class="p-4 border-b text-xl font-semibold text-brand">אינסטלציה קלה</div>
         <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>החלפת ברזים וניאגרות</li><li>פתיחת סתימות פשוטות</li><li>תיקוני נזילות</li><li>התקנת מסנני מים</li>
+          <li>החלפת ברזים וניאגרות</li><li>פתיחת סתימות פשוטות</li><li>תיקוני נזילות</li>
         </ul>
-      </div>
-      <div class="rounded-2xl bg-white border shadow-sm">
-        <div class="p-4 border-b text-xl font-semibold text-brand">צבע ושפכטל</div>
-        <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>צביעת חדרים ומשרדים</li><li>תיקוני קירות, שפכטל וטיח</li><li>צביעת דלתות ומשקופים</li><li>התקנת טפטים</li>
-        </ul>
-      </div>
-      <div class="rounded-2xl bg-white border shadow-sm">
-        <div class="p-4 border-b text-xl font-semibold text-brand">תחזוקה וביטחון</div>
-        <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>מנעולים וצילינדרים</li><li>תיקון תריסים</li><li>איטום חלונות ודלתות</li><li>רשתות לחלונות</li>
-        </ul>
-      </div>
-      <div class="rounded-2xl bg-white border shadow-sm">
-        <div class="p-4 border-b text-xl font-semibold text-brand">חוץ וגינה</div>
-        <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>הרכבת מחסנים (Keter)</li><li>תיקוני גדרות ושערים</li><li>ניקוי מרזבים</li><li>דק ופרגולה מוכנה</li>
-        </ul>
-      </div>
-    </div>
-  </section>
-
-  <!-- Pricing -->
-  <section class="bg-white py-12 border-y">
-    <div class="max-w-6xl mx-auto px-4">
-      <h3 class="text-2xl md:text-3xl font-bold mb-8">מחירים לדוגמה</h3>
-      <div class="grid md:grid-cols-3 gap-6">
-        <div class="rounded-2xl bg-white border shadow-sm">
-          <div class="p-4 border-b flex items-center justify-between">
-            <span class="font-semibold">ביקור טכנאי</span>
-            <span class="text-xl font-extrabold text-brand">מ-249₪</span>
-          </div>
-          <ul class="p-4 space-y-2 text-gray-700">
-            <li>כולל בדיקה וייעוץ</li><li>קיזוז מעלות העבודה</li><li>הגעה מהירה</li>
-          </ul>
-          <a href="#contact" class="mx-4 mb-4 block text-center px-4 py-2 rounded-2xl bg-accent text-white hover:opacity-90 transition">אני רוצה הצעה</a>
-        </div>
-        <div class="rounded-2xl bg-white border shadow-sm">
-          <div class="p-4 border-b flex items-center justify-between">
-            <span class="font-semibold">תליית טלוויזיה</span>
-            <span class="text-xl font-extrabold text-brand">מ-299₪</span>
-          </div>
-          <ul class="p-4 space-y-2 text-gray-700">
-            <li>יישור מדויק</li><li>הסתרת כבלים בסיסית</li><li>אחריות מלאה</li>
-          </ul>
-          <a href="#contact" class="mx-4 mb-4 block text-center px-4 py-2 rounded-2xl bg-accent text-white hover:opacity-90 transition">אני רוצה הצעה</a>
-        </div>
-        <div class="rounded-2xl bg-white border shadow-sm">
-          <div class="p-4 border-b flex items-center justify-between">
-            <span class="font-semibold">צביעת חדר</span>
-            <span class="text-xl font-extrabold text-brand">מ-950₪</span>
-          </div>
-          <ul class="p-4 space-y-2 text-gray-700">
-            <li>צביעה נקייה</li><li>תיקוני שפכטל קלים</li><li>חומרי גלם כלולים</li>
-          </ul>
-          <a href="#contact" class="mx-4 mb-4 block text-center px-4 py-2 rounded-2xl bg-accent text-white hover:opacity-90 transition">אני רוצה הצעה</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Before & After (דמו זמני) -->
-  <section class="max-w-6xl mx-auto px-4 py-12">
-    <h3 class="text-2xl md:text-3xl font-bold mb-6">לפני ואחרי</h3>
-    <div class="grid md:grid-cols-3 gap-6">
-      <div class="rounded-2xl overflow-hidden bg-white border shadow-sm">
-        <div class="grid grid-cols-2">
-          <img src="https://images.unsplash.com/photo-1505691723518-36a5ac3b2a59?w=1600&auto=format&fit=crop&q=80" class="w-full h-48 object-cover" alt="before">
-          <img src="https://images.unsplash.com/photo-1505691938895-1758d7feb511?w=1600&auto=format&fit=crop&q=80" class="w-full h-48 object-cover" alt="after">
-        </div>
-        <div class="p-4 border-t">
-          <div class="text-sm text-gray-600">תליית טלוויזיה + הסתרת כבלים</div>
-          <div class="text-xs text-gray-500">* דוגמאות זמניות. נחליף לשלכם כשיהיו.</div>
-        </div>
-      </div>
-      <div class="rounded-2xl overflow-hidden bg-white border shadow-sm">
-        <div class="grid grid-cols-2">
-          <img src="https://images.unsplash.com/photo-1582582621958-3a3b4a8b0f24?w=1600&auto=format&fit=crop&q=80" class="w-full h-48 object-cover" alt="before">
-          <img src="https://images.unsplash.com/photo-1582582622084-079a3a644610?w=1600&auto=format&fit=crop&q=80" class="w-full h-48 object-cover" alt="after">
-        </div>
-        <div class="p-4 border-t">
-          <div class="text-sm text-gray-600">צביעת חדר ותיקוני שפכטל</div>
-          <div class="text-xs text-gray-500">* דוגמאות זמניות. נחליף לשלכם כשיהיו.</div>
-        </div>
-      </div>
-      <div class="rounded-2xl overflow-hidden bg-white border shadow-sm">
-        <div class="grid grid-cols-2">
-          <img src="https://images.unsplash.com/photo-1560185007-b03591f8d7d1?w=1600&auto=format&fit=crop&q=80" class="w-full h-48 object-cover" alt="before">
-          <img src="https://images.unsplash.com/photo-1560184897-43a8db3bf65e?w=1600&auto=format&fit=crop&q=80" class="w-full h-48 object-cover" alt="after">
-        </div>
-        <div class="p-4 border-t">
-          <div class="text-sm text-gray-600">החלפת ברז וכיור</div>
-          <div class="text-xs text-gray-500">* דוגמאות זמניות. נחליף לשלכם כשיהיו.</div>
-        </div>
       </div>
     </div>
   </section>
@@ -204,42 +107,24 @@
   <section id="testimonials" class="bg-bg py-12 border-t">
     <div class="max-w-6xl mx-auto px-4">
       <h3 class="text-2xl md:text-3xl font-bold mb-8 text-brand">מה הלקוחות מספרים עלינו</h3>
-
       <div class="grid md:grid-cols-3 gap-6">
         <div class="rounded-2xl bg-white border shadow-sm p-6">
           <div class="text-gray-700 leading-relaxed">
-            “התקשרתי בבוקר לתיקון תקלה בתאורה, וכפיר הגיע תוך שעה! עבודה נקייה, מקצועית ויחס מדהים.”
+            “כפיר הגיע תוך שעה ותיקן את התאורה במהירות. שירות מעולה ואדיב!”
           </div>
           <div class="mt-4 font-semibold text-brand">– עדי מ., תל אביב</div>
         </div>
-
         <div class="rounded-2xl bg-white border shadow-sm p-6">
           <div class="text-gray-700 leading-relaxed">
-            “בני צבע לנו את כל הסלון תוך יום אחד. שירות אדיב, מחיר הוגן, ואפילו עזר להזיז רהיטים בלי שביקשתי.”
+            “בני צבע את הסלון ביום אחד והשאיר הכול נקי ומסודר. פשוט תענוג!”
           </div>
           <div class="mt-4 font-semibold text-brand">– ליאת ו., פתח תקווה</div>
         </div>
-
         <div class="rounded-2xl bg-white border shadow-sm p-6">
           <div class="text-gray-700 leading-relaxed">
-            “סוף סוף מישהו שאפשר לסמוך עליו! הרכיב ארון, תיקן ניאגרה וצביעה קטנה – הכל באותו יום, בלי הפתעות.”
+            “אמינים, זמינים ותמיד עם חיוך. עשו עבודה מושלמת.”
           </div>
           <div class="mt-4 font-semibold text-brand">– רון ש., ראשון לציון</div>
-        </div>
-      </div>
-
-      <div class="mt-10 grid md:grid-cols-2 gap-6">
-        <div class="rounded-2xl bg-white border shadow-sm p-6">
-          <div class="text-gray-700 leading-relaxed">
-            “שירות מהיר ומעל המצופה. שלחתי תמונה בוואטסאפ וקיבלתי הצעת מחיר במקום. ממליצה בחום.”
-          </div>
-          <div class="mt-4 font-semibold text-brand">– נטע ח., רמת גן</div>
-        </div>
-        <div class="rounded-2xl bg-white border shadow-sm p-6">
-          <div class="text-gray-700 leading-relaxed">
-            “BK אחזקות טיפלו לנו בתריסים ובדלתות. כל דבר בוצע בדיוק ובסבלנות. אנשים זהב!”
-          </div>
-          <div class="mt-4 font-semibold text-brand">– אמיר ג., חולון</div>
         </div>
       </div>
     </div>
@@ -250,76 +135,51 @@
     <div class="max-w-6xl mx-auto px-4">
       <h3 class="text-2xl md:text-3xl font-bold mb-6">דברו איתנו</h3>
       <div class="grid md:grid-cols-2 gap-8">
-        <div class="rounded-2xl bg-white border shadow-sm">
-          <div class="p-4 border-b font-semibold text-brand">בקשת הצעת מחיר</div>
-          <div class="p-4">
-            <form onsubmit="handleSubmit(event)" class="grid gap-3">
-              <div>
-                <label class="text-sm">שם מלא</label>
-                <input class="mt-1 w-full border rounded-xl px-3 py-2" id="name" placeholder="הקלידו שם">
-              </div>
-              <div>
-                <label class="text-sm">טלפון</label>
-                <input class="mt-1 w-full border rounded-xl px-3 py-2" id="phone" placeholder="050-0000000">
-              </div>
-              <div>
-                <label class="text-sm">סוג שירות</label>
-                <input class="mt-1 w-full border rounded-xl px-3 py-2" id="service" placeholder="לדוגמה תליית טלוויזיה">
-              </div>
-              <div>
-                <label class="text-sm">פרטים נוספים</label>
-                <textarea rows="4" class="mt-1 w-full border rounded-xl px-3 py-2" id="msg" placeholder="ספרו לנו מה צריך"></textarea>
-              </div>
-              <button type="submit" class="px-4 py-2 rounded-2xl bg-accent text-white hover:opacity-90 transition">שליחה</button>
-            </form>
-          </div>
+        <div class="rounded-2xl bg-white border shadow-sm p-6">
+          <form onsubmit="handleSubmit(event)" class="grid gap-3">
+            <input type="text" id="name" placeholder="שם מלא" class="border rounded-xl px-3 py-2">
+            <input type="tel" id="phone" placeholder="טלפון" class="border rounded-xl px-3 py-2">
+            <input type="text" id="service" placeholder="סוג שירות" class="border rounded-xl px-3 py-2">
+            <textarea id="msg" rows="4" placeholder="פרטים נוספים" class="border rounded-xl px-3 py-2"></textarea>
+            <button type="submit" class="px-4 py-2 rounded-2xl bg-accent text-white hover:opacity-90 transition">שליחה</button>
+          </form>
         </div>
-        <div class="rounded-2xl p-6 bg-bg border">
-          <div class="text-lg font-semibold mb-2">פרטי קשר</div>
-          <div class="space-y-2 text-gray-700">
-            <div>050-0000000</div>
-            <div>מרכז הארץ והסביבה</div>
-          </div>
-          <div class="mt-4">
-            <a id="waLink2" href="#" class="px-4 py-2 rounded-2xl bg-accent text-white inline-block hover:opacity-90 transition">שלחו תמונה בווטסאפ</a>
-          </div>
-          <div class="mt-6 text-sm text-gray-600">
-            אפשר לשלוח תמונות של העבודה כדי לקבל הצעת מחיר מהירה בלי התחייבות.
-          </div>
+        <div>
+          <p class="text-gray-700 mb-4">📞 050-0000000<br>מרכז הארץ והסביבה</p>
+          <a id="waLink2" href="#" class="px-4 py-2 rounded-2xl bg-green-500 text-white hover:bg-green-600 transition inline-block">שלחו הודעה בוואטסאפ</a>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
-  <footer class="border-t bg-white">
-    <div class="max-w-6xl mx-auto px-4 py-8 grid md:grid-cols-2 gap-6 items-center">
-      <div>
-        <div class="text-xl font-bold text-brand">BK אחזקות</div>
-        <div class="text-sm text-gray-700">בני וכפיר. כל פתרונות הבית במקום אחד. אחריות ושירות אישי.</div>
-      </div>
-      <div class="text-sm text-gray-600 md:text-left">
-        © <span id="year"></span> BK אחזקות. כל הזכויות שמורות.
-      </div>
-    </div>
-  </footer>
+  <!-- WhatsApp Floating Button -->
+  <a href="https://wa.me/972500000000?text=שלום!%20אשמח%20לקבל%20פרטים%20על%20שירותי%20B%26K%20אחזקות"
+     class="fixed bottom-5 left-5 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50"
+     target="_blank" aria-label="WhatsApp">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24">
+      <path d="M12 .02C5.384.02 0 5.403 0 12.02c0 2.115.55 4.168 1.595 5.987L.043 24l6.195-1.62A11.99 11.99 0 0 0 12 24c6.616 0 12-5.383 12-12S18.616.02 12 .02zm0 22c-1.824 0-3.609-.465-5.185-1.345l-.37-.209-3.676.962.983-3.581-.24-.37A9.928 9.928 0 0 1 2 12.02C2 6.49 6.47 2.02 12 2.02s10 4.47 10 10c0 5.53-4.47 10-10 10zm5.398-7.494c-.297-.149-1.758-.867-2.03-.965-.272-.099-.47-.149-.667.149s-.765.965-.94 1.164-.347.223-.644.074c-.297-.149-1.254-.463-2.39-1.475-.883-.788-1.48-1.76-1.652-2.057-.173-.297-.018-.458.13-.606.133-.132.297-.347.445-.52.149-.174.198-.297.298-.495.099-.198.05-.372-.025-.52-.075-.148-.667-1.61-.913-2.206-.24-.58-.484-.502-.667-.512h-.57c-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479s1.065 2.876 1.213 3.074c.149.198 2.1 3.2 5.083 4.484.71.306 1.263.489 1.694.626.712.227 1.36.195 1.872.118.57-.085 1.758-.718 2.006-1.411.248-.694.248-1.288.173-1.411-.074-.124-.272-.198-.57-.347z"/>
+    </svg>
+  </a>
 
   <script>
-    document.getElementById('year').textContent = new Date().getFullYear();
-
     function handleSubmit(e){
       e.preventDefault();
       const name = document.getElementById('name').value || '';
-      const phone = document.getElementById('phone').value || 'לא הוזן';
-      alert(`תודה רבה ${name}!\nקיבלנו את הפנייה ונחזור אליך בהקדם.\nטלפון שנרשם: ${phone}`);
+      const phone = document.getElementById('phone').value || '';
+      const service = document.getElementById('service').value || '';
+      const msg = document.getElementById('msg').value || '';
+      const text = `👋 שלום, אני ${name}%0Aטלפון: ${phone}%0Aשירות מבוקש: ${service}%0Aפרטים נוספים: ${msg}`;
+      const phoneIntl = '972500000000'; // תחליף למספר שלך
+      const wa = `https://wa.me/${phoneIntl}?text=${text}`;
+      window.open(wa, '_blank');
     }
 
-    // כשהמספר יהיה מוכן: עדכן כאן! לדוגמה 050-1234567 -> 972501234567
     const phoneIntl = '972500000000';
     const wa = `https://wa.me/${phoneIntl}`;
     document.getElementById('waLink').href = wa;
     document.getElementById('waLink2').href = wa;
     document.getElementById('phoneLink').href = 'tel:+972500000000';
   </script>
+
 </body>
 </html>
