--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>B&K אחזקות – כל פתרונות הבית במקום אחד</title>
-  <meta name="description" content="B&K אחזקות – הנדימן מקצועי עם יחס אישי. חשמל קל, אינסטלציה, צבע, הרכבות ותיקונים. זמינות במרכז, אחריות מלאה.">
+  <meta name="description" content="B&K אחזקות – צוות מקצועי לעבודות חשמל, אינסטלציה, צבע ותחזוקה. אמינות, אחריות וזמינות מלאה.">
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
@@ -52,10 +52,10 @@
         B&K אחזקות – אמינות, אחריות וזמינות
       </span>
       <h1 class="text-4xl md:text-6xl font-extrabold leading-tight text-brand">
-        שירותי הנדימן מקצועיים עם יחס אישי
+        שירותי הנדימן מקצועיים לבית ולעסק
       </h1>
       <p class="mt-4 text-lg text-gray-700 max-w-2xl">
-        מהרכבת רהיטים ותליית טלוויזיות ועד חשמל קל, צבע ואינסטלציה. זמינות בכל המרכז, אחריות על כל עבודה ומחירים הוגנים מראש.
+        התקנות, צבע, אינסטלציה, חשמל קל ותחזוקה שוטפת – הצוות שלנו כאן כדי לטפל בכל מה שצריך באיכות ובאמינות.
       </p>
       <div class="mt-6 flex flex-wrap gap-3">
         <a href="#contact" class="px-5 py-3 rounded-2xl bg-accent text-white text-base hover:opacity-90 transition">קבלו הצעת מחיר מהירה</a>
@@ -64,7 +64,7 @@
       <div class="mt-6 flex flex-wrap gap-6 text-sm text-gray-700">
         <span>הגעה מהירה</span>
         <span>אחריות מלאה</span>
-        <span>תשלום נוח ופשוט</span>
+        <span>שירות מקצועי ואישי</span>
       </div>
     </div>
   </header>
@@ -73,8 +73,8 @@
   <section class="max-w-6xl mx-auto px-4 py-10">
     <h2 class="text-3xl md:text-4xl font-bold mb-3 text-brand">למה הקמנו את B&K אחזקות</h2>
     <p class="text-gray-700 max-w-4xl leading-7">
-      B&K אחזקות נולדה מהשטח: בני וכפיר ראו כמה קשה למצוא בעלי מקצוע אמינים שמגיעים בזמן, מסבירים מראש את העלויות ומשאירים בית נקי.
-      לכן הקמנו שירות הנדימן שנותן שקט נפשי – תקשורת ברורה, מחירים הוגנים ואחריות מלאה על כל עבודה.
+      B&K אחזקות הוקמה מתוך הבנה עמוקה כמה קשה למצוא בעלי מקצוע אמינים, שמגיעים בזמן, עובדים באחריות ומשאירים את הבית נקי ומסודר.
+      החברה מאגדת צוות מומחים בתחזוקה, חשמל, אינסטלציה וצבע – עם דגש על שירות אישי, איכות עבודה גבוהה ואחריות מלאה על כל פרויקט.
     </p>
   </section>
 
@@ -110,19 +110,19 @@
       <div class="grid md:grid-cols-3 gap-6">
         <div class="rounded-2xl bg-white border shadow-sm p-6">
           <div class="text-gray-700 leading-relaxed">
-            “כפיר הגיע תוך שעה ותיקן את התאורה במהירות. שירות מעולה ואדיב!”
+            “הצוות של B&K אחזקות הגיע בדיוק בזמן, עבדו נקי ומסודר והשאירו תחושה מצוינת. מומלץ בחום!”
           </div>
           <div class="mt-4 font-semibold text-brand">– עדי מ., תל אביב</div>
         </div>
         <div class="rounded-2xl bg-white border shadow-sm p-6">
           <div class="text-gray-700 leading-relaxed">
-            “בני צבע את הסלון ביום אחד והשאיר הכול נקי ומסודר. פשוט תענוג!”
+            “מקצוענים אמיתיים! תיקנו אצלנו כמה תקלות חשמל ואינסטלציה – הכול נעשה באחריות ובחיוך.”
           </div>
           <div class="mt-4 font-semibold text-brand">– ליאת ו., פתח תקווה</div>
         </div>
         <div class="rounded-2xl bg-white border shadow-sm p-6">
           <div class="text-gray-700 leading-relaxed">
-            “אמינים, זמינים ותמיד עם חיוך. עשו עבודה מושלמת.”
+            “שירות מעולה – נתנו הצעת מחיר הוגנת מראש, עמדו בלוחות זמנים, והשירות היה ברמה גבוהה מאוד.”
           </div>
           <div class="mt-4 font-semibold text-brand">– רון ש., ראשון לציון</div>
         </div>
@@ -169,7 +169,7 @@
       const service = document.getElementById('service').value || '';
       const msg = document.getElementById('msg').value || '';
       const text = `👋 שלום, אני ${name}%0Aטלפון: ${phone}%0Aשירות מבוקש: ${service}%0Aפרטים נוספים: ${msg}`;
-      const phoneIntl = '972500000000'; // תחליף למספר שלך
+      const phoneIntl = '972500000000'; // החלף למספר שלך
       const wa = `https://wa.me/${phoneIntl}?text=${text}`;
       window.open(wa, '_blank');
     }
