--- a/index.html
+++ b/index.html
@@ -5,32 +5,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>B&K אחזקות – כל פתרונות הבית במקום אחד</title>
   <meta name="description" content="B&K אחזקות – צוות מקצועי לעבודות חשמל, אינסטלציה, צבע ותחזוקה. אמינות, אחריות וזמינות מלאה.">
+
   <!-- Font + Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300;400;600;700&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       theme: {
-        extend: {
-          colors: { brand:'#1E3A8A', accent:'#F97316', bg:'#FAF7F2' }
-        }
+        extend: { colors: { brand:'#1E3A8A', accent:'#F97316', bg:'#FAF7F2' } }
       }
     }
   </script>
-
-  <!-- Favicon (עדכן נתיב אם צריך) -->
-  <link rel="icon" type="image/png" href="https://raw.githubusercontent.com/bennyot-cloud/bk-site/main/favicon.png" />
-
   <style> body{font-family:"Assistant",sans-serif;} </style>
+
+  <!-- Favicon מהריפו שלך -->
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
+
 <body class="bg-bg text-gray-900">
 
   <!-- Top Bar -->
   <div class="w-full bg-brand text-white sticky top-0 z-50">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
       <div class="flex items-center gap-3">
-        <!-- לוגו (עדכן נתיב אם צריך) -->
-        <img src="https://raw.githubusercontent.com/bennyot-cloud/bk-site/main/logo.png" alt="B&K אחזקות" class="h-12">
+        <!-- הלוגו שלך -->
+        <img src="logo.png" alt="B&K אחזקות" class="h-12">
         <div>
           <div class="text-xl font-bold">B&K אחזקות</div>
           <div class="text-sm text-white/80">כל פתרונות הבית במקום אחד</div>
@@ -166,32 +165,27 @@
      class="fixed bottom-5 left-5 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50"
      target="_blank" aria-label="WhatsApp">
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24">
-      <path d="M12 .02C5.384.02 0 5.403 0 12.02c0 2.115.55 4.168 1.595 5.987L.043 24l6.195-1.62A11.99 11.99 0 0 0 12 24c6.616 0 12-5.383 12-12S18.616.02 12 .02zm0 22c-1.824 0-3.609-.465-5.185-1.345l-.37-.209-3.676.962.983-3.581-.24-.37A9.928 9.928 0 0 1 2 12.02C2 6.49 6.47 2.02 12 2.02s10 4.47 10 10c0 5.53-4.47 10-10 10zm5.398-7.494c-.297-.149-1.758-.867-2.03-.965-.272-.099-.47-.149-.667.149s-.765.965-.94 1.164-.347.223-.644.074c-.297-.149-1.254-.463-2.39-1.475-.883-.788-1.48-1.76-1.652-2.057-.173-.297-.018-.458.13-.606.133-.132.297-.347.445-.52.149-.174.198-.297.298-.495.099-.198.05-.372-.025-.52-.075-.148-.667-1.61-.913-2.206-.24-.58-.484-.502-.667-.512h-.57c-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479s1.065 2.876 1.213 3.074c.149.198 2.1 3.2 5.083 4.484.71.306 1.263.489 1.694.626.712.227 1.36.195 1.872.118.57-.085 1.758-.718 2.006-1.411.248-.694.248-1.288.173-1.411-.074-.124-.272-.198-.57-.347z"/>
+      <path d="M12 .02C5.384.02 0 5.403 0 12.02c0 2.115.55 4.168 1.595 5.987L.043 24l6.195-1.62A11.99 11.99 0 0 0 12 24c6.616 0 12-5.383 12-12S18.616.02 12 .02z"/>
     </svg>
   </a>
 
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-
-    // טופס -> וואטסאפ
     function handleSubmit(e){
       e.preventDefault();
-      const name = document.getElementById('name').value || '';
-      const phone = document.getElementById('phone').value || '';
-      const service = document.getElementById('service').value || '';
-      const msg = document.getElementById('msg').value || '';
-      const text = `👋 שלום, אני ${name}%0Aטלפון: ${phone}%0Aשירות מבוקש: ${service}%0Aפרטים נוספים: ${msg}`;
-      const phoneIntl = '972500000000'; // עדכן למספר שלך (למשל 972501234567)
-      const wa = `https://wa.me/${phoneIntl}?text=${text}`;
-      window.open(wa, '_blank');
+      const name=document.getElementById('name').value||'';
+      const phone=document.getElementById('phone').value||'';
+      const service=document.getElementById('service').value||'';
+      const msg=document.getElementById('msg').value||'';
+      const phoneIntl='972500000000'; // החלף למספר שלך
+      const text=`👋 שלום, אני ${name}%0Aטלפון: ${phone}%0Aשירות מבוקש: ${service}%0Aפרטים נוספים: ${msg}`;
+      window.open(`https://wa.me/${phoneIntl}?text=${text}`,'_blank');
     }
-
-    // קישורי וואטסאפ ישירים
-    const phoneIntl = '972500000000'; // עדכן למספר שלך
-    const wa = `https://wa.me/${phoneIntl}`;
-    document.getElementById('waLink').href = wa;
-    document.getElementById('waLink2').href = wa;
-    document.getElementById('phoneLink').href = 'tel:+972500000000'; // עדכן גם כאן
+    const phoneIntl='972500000000';
+    document.getElementById('waLink').href=`https://wa.me/${phoneIntl}`;
+    document.getElementById('waLink2').href=`https://wa.me/${phoneIntl}`;
+    document.getElementById('phoneLink').href='tel:+972500000000';
   </script>
+
 </body>
 </html>
