--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>B&K אחזקות – כל פתרונות הבית במקום אחד</title>
-  <meta name="description" content="B&K אחזקות – הנדימן ושירותי תחזוקה לבית ולעסק: חשמל קל, אינסטלציה, צבע, התקנות ותחזוקה. שירות אמין, הגעה מהירה ואחריות.">
+  <meta name="description" content="B&K אחזקות – הנדימן ושירותי תחזוקה לבית ולעסק: חשמל, אינסטלציה, צבע, התקנות ותחזוקה. שירות אמין, הגעה מהירה ואחריות.">
   <link rel="icon" type="image/png" href="favicon.png">
 
   <!-- Font + Tailwind -->
@@ -83,24 +83,83 @@
 
   <!-- Services -->
   <section id="services" class="max-w-6xl mx-auto px-4 py-10 bg-white rounded-2xl shadow-sm border">
-    <h3 class="text-2xl md:text-3xl font-bold mb-6 text-brand">שירותים מובילים</h3>
+    <h3 class="text-2xl md:text-3xl font-bold mb-6 text-brand">שירותים</h3>
+
     <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <!-- 1. עבודות כלליות -->
       <div class="rounded-2xl bg-white border shadow-sm">
-        <div class="p-4 border-b text-xl font-semibold text-brand">עבודות כלליות</div>
+        <div class="p-4 border-b text-xl font-semibold text-brand">🛠️ עבודות כלליות</div>
         <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>הרכבת רהיטים</li><li>תליית טלוויזיות, מדפים ומראות</li><li>ידיות וצירים</li><li>מתלים ווילונות</li>
+          <li>הרכבת רהיטים (איקאה, H&O, הום סנטר)</li>
+          <li>תליית טלוויזיות, מדפים, מראות, תמונות</li>
+          <li>תיקון דלתות, צירים, ידיות</li>
+          <li>התקנת מתלים, מתקני תלייה, וילונות</li>
         </ul>
       </div>
+
+      <!-- 2. חשמל ותאורה -->
       <div class="rounded-2xl bg-white border shadow-sm">
-        <div class="p-4 border-b text-xl font-semibold text-brand">חשמל ותאורה</div>
+        <div class="p-4 border-b text-xl font-semibold text-brand">💡 חשמל ותאורה</div>
         <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>התקנת גופי תאורה</li><li>מפסקים ושקעים</li><li>איתור תקלות בסיסיות</li><li>הרחבת נקודות</li>
+          <li>התקנת גופי תאורה ומאווררי תקרה</li>
+          <li>החלפת שקעים ומפסקים</li>
+          <li>איתור תקלות בסיסיות</li>
+          <li>התקנת נקודות חשמל נוספות (עם חשמלאי מוסמך לפי הצורך)</li>
         </ul>
       </div>
+
+      <!-- 3. אינסטלציה קלה -->
       <div class="rounded-2xl bg-white border shadow-sm">
-        <div class="p-4 border-b text-xl font-semibold text-brand">אינסטלציה קלה</div>
+        <div class="p-4 border-b text-xl font-semibold text-brand">🚰 אינסטלציה קלה</div>
         <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
-          <li>החלפת ברזים וניאגרות</li><li>פתיחת סתימות פשוטות</li><li>תיקוני נזילות</li>
+          <li>החלפת ברזים וניאגרות</li>
+          <li>פתיחת סתימות פשוטות</li>
+          <li>תיקון נזילות קטנות</li>
+          <li>התקנת מסנני מים</li>
+        </ul>
+      </div>
+
+      <!-- 4. צבע ושיפוצים קלים -->
+      <div class="rounded-2xl bg-white border shadow-sm">
+        <div class="p-4 border-b text-xl font-semibold text-brand">🎨 צבע ושיפוצים קלים</div>
+        <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
+          <li>צביעת חדרים / דירות / משרדים</li>
+          <li>תיקון קירות, שפכטל וטיח</li>
+          <li>התקנת טפטים</li>
+          <li>צביעת דלתים, משקופים וחלונות</li>
+        </ul>
+      </div>
+
+      <!-- 5. תחזוקה וביטחון -->
+      <div class="rounded-2xl bg-white border shadow-sm">
+        <div class="p-4 border-b text-xl font-semibold text-brand">🔒 תחזוקה וביטחון</div>
+        <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
+          <li>החלפת מנעולים וצילינדרים</li>
+          <li>תיקון תריסים חשמליים / רגילים</li>
+          <li>איטום חלונות ודלתות</li>
+          <li>תחזוקת גינות קטנות</li>
+        </ul>
+      </div>
+
+      <!-- 6. חוץ וגינה -->
+      <div class="rounded-2xl bg-white border shadow-sm">
+        <div class="p-4 border-b text-xl font-semibold text-brand">🏡 חוץ וגינה</div>
+        <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
+          <li>הרכבת מחסנים (Keter ודומיהם)</li>
+          <li>תיקון שערים / גדרות</li>
+          <li>התקנת דק או פרגולה מוכנה</li>
+          <li>ניקוי מרזבים וגגות</li>
+        </ul>
+      </div>
+
+      <!-- 7. שירותים עסקיים -->
+      <div class="rounded-2xl bg-white border shadow-sm">
+        <div class="p-4 border-b text-xl font-semibold text-brand">🧰 שירותים עסקיים</div>
+        <ul class="p-4 list-disc pr-5 text-gray-700 space-y-1">
+          <li>תחזוקה שוטפת לעסקים ומשרדים</li>
+          <li>עבודות לוועדי בתים ודירות AIRBNB</li>
+          <li>ליווי מעברי דירה (פירוק, הובלה, הרכבה)</li>
+          <li>שירותי חירום וזמינות בערב</li>
         </ul>
       </div>
     </div>
@@ -157,7 +216,7 @@
           <p class="text-gray-700 mb-3">
             📞 <a id="phoneText" href="tel:+972500000000" class="underline">050-0000000</a><br>
             אזור הפעילות: מרכז והסביבה<br>
-            שעות: א׳–ו׳ 08:00–19:00
+            שעות: א׳–ה׳ 08:00–19:00
           </p>
           <a id="waBlock" href="https://wa.me/972500000000" class="px-4 py-2 rounded-2xl bg-green-500 text-white hover:bg-green-600 transition inline-block">שלחו הודעה בוואטסאפ</a>
         </div>
@@ -182,14 +241,13 @@
   <a id="waFloat" href="https://wa.me/972500000000"
      class="fixed bottom-5 left-5 bg-green-500 hover:bg-green-600 text-white p-4 rounded-full shadow-lg z-50"
      target="_blank" aria-label="WhatsApp">
-    <!-- icon -->
     <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="currentColor" viewBox="0 0 24 24">
       <path d="M12 .02C5.384.02 0 5.403 0 12.02c0 2.115.55 4.168 1.595 5.987L.043 24l6.195-1.62A11.99 11.99 0 0 0 12 24c6.616 0 12-5.383 12-12S18.616.02 12 .02z"/>
     </svg>
   </a>
 
   <script>
-    // שנה כאן למספר האמיתי כשתהיה מוכן (בפורמט בינלאומי בלי 0)
+    // שנה למספר האמיתי (בפורמט בינלאומי בלי 0)
     const phoneIntl = '972500000000'; // לדוגמה: 97252XXXXXXX
     const phoneHuman = '050-0000000';
 
